fixed spacing between links

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,4 +12,5 @@ img {
 }
 footer a {
   color: green;
+  margin: 0 10px;
 }
